# TTL-Legacy

./: .env.example  .gitignore  .gitleaks.toml  CHANGES_DETAIL.md  CONTRIBUTING.md  DELIVERABLES.md  FEATURE_QUICK_REFERENCE.md  GIT_WORKFLOW_SUMMARY.md  IMPLEMENTATION_ISSUES_577_580.md  IMPLEMENTATION_SUMMARY.md  ISSUE_502_QUICK_REFERENCE.md  ISSUE_503_CHECKLIST.md  ISSUE_503_INDEX.md  ISSUE_503_SUMMARY.txt  PR_MESSAGE.md  README.md  Safe Edges Response Re: Security Audit Services for TTL-Legacy Contracts.md  task1.md
.cargo/: audit.toml
backend/: Cargo.toml
backend/.well-known/: assetlinks.json
backend/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  notifications.rs  routes.rs  scheduler.rs  templates.rs  tests.rs  websocket.rs
contracts/ttl_vault/: Cargo.toml
contracts/ttl_vault/fuzz/: Cargo.toml
contracts/ttl_vault/fuzz/src/: fuzz_vesting.rs
contracts/ttl_vault/src/: beneficiary_pooling_tests.rs  beneficiary_swap_tests.rs  beneficiary_vesting_auction_tests.rs  bps_invariant_tests.rs  caps.rs  floors.rs  lib.rs  lifecycle_tests.rs  matching.rs  ranking.rs  regression_tests.rs  test.rs  types.rs
contracts/ttl_vault/tests/: integration_tests.rs  property_tests.rs
docs/: api-reference.md  backend-api.md  beneficiary-advanced-features.md  beneficiary-caps.md  beneficiary-conditional-acceptance.md  beneficiary-conflict-resolution.md  beneficiary-floors.md  beneficiary-matching.md  beneficiary-minimum-threshold.md  beneficiary-proof-of-life-and-voting.md  beneficiary-ranking.md  duplicate-vault-prevention.md  hibernation.md  multi-sig.md  (+7 more)
(+36 files in other folders)
